<resources>
    <string name="app_name">My Local Banks</string>
    <string name="bank_name">Bank name</string>
    <string name="enter_your_favourite_bank">Enter your favourite bank :</string>
    <string name="dbs">DBS</string>
    <string name="ocbc">OCBC</string>
    <string name="uob">UOB</string>
    <string name="please_select_a_bank_below">Please Select a bank below :</string>
    <string name="bank_details">Bank Details :</string>
    <string name="picdbs">picdbs</string>
    <string name="picuob">picuob</string>
    <string name="picocbc">picocbc</string>

</resources>